--- a/package.json
+++ b/package.json
@@ -16,16 +16,28 @@
     "charts.css": "^1.1.0",
     "d3": "^7.9.0",
     "d3-geo-projection": "^4.0.0",
+    "dotenv": "^16.4.7",
+    "js-cookie": "^3.0.5",
+    "jsonwebtoken": "^9.0.2",
+    "jwt-decode": "^4.0.0",
+    "multi-part": "^4.0.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.2",
+    "react-cookie": "^7.2.2",
     "react-dom": "^18.2.0",
     "react-google-charts": "^4.0.1",
     "react-icons": "^5.1.0",
+    "react-loading-icons": "^1.1.0",
     "react-router-dom": "^6.22.3",
     "react-scripts": "5.0.1",
     "react-select": "^5.8.0",
     "react-simple-maps": "^3.0.0",
-    "web-vitals": "^2.1.4"
+    "react-toastify": "^11.0.3",
+    "redirect": "^0.2.0",
+    "sweetalert2": "^11.15.10",
+    "useparams": "^0.0.2",
+    "web-vitals": "^2.1.4",
+    "yarn": "^1.22.22"
   },
   "scripts": {
     "start": "react-scripts start",
